<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="contacts">Contacts</string>
    <string name="addNew">Add New</string>
    <string name="skip">Skip</string>
    <string name="sync">Sync</string>
    <string name="syncWith">Sync with</string>
    
    <string name="viewList">View List</string>
	<string name="interactions">Interactions</string>	
	<string name="followUps">Follow Ups</string>	
	<string name="welcomeText">Welcome Textblalblablablablablalbalbsdfsdfsdf</string>	
	<string name="recommendText">We recommend you bring in your contacts</string>	
	
	<string name="viewGroups">View Groups</string>	
    <string name="app_name">proLog</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
    <color name="grey">#808080</color>
    
</resources>