<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/mainLinearLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:text="@string/welcomeText"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:text="@string/recommendText"
            android:textColor="@color/white"
            android:textSize="20sp" />
        
        
         <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/syncWith"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ExpandableListView
            android:id="@+id/ExpList"
            android:layout_width="match_parent"
            android:layout_height="200dp" >
        </ExpandableListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="bottom"
             >

            <Button
                android:id="@+id/buttonSyncSync"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="match_parent"
                android:background="@color/grey"
				android:text="@string/sync" />

            <Button
                android:id="@+id/buttonSyncSkip"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="match_parent"
                android:background="@color/grey"
                android:text="@string/skip" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>